minor updates in text

--- a/index.html
+++ b/index.html
@@ -907,14 +907,14 @@
             <div class="about-grid">
                 <div class="about-content">
                     <h3>From Supernova to Software</h3>
-                    <p>With a Master's degree in Physics from Pune University and research experience at the National
+                    <p>With a Master's degree in Physics from Pune University and research experience in Astrophysics and Cosmology at the National
                         Center for Nuclear Research, I bring a unique analytical perspective to data science and AI
                         engineering.</p>
                     <p>Currently at ING Hubs Poland in Warsaw, I execute advanced analytics projects optimizing model
                         thresholds, build robust data pipelines, and lead quarterly back-testing initiatives across 35+
                         entities.</p>
-                    <p>My passion lies in creating intelligent systems—from multi-agent AI pipelines to conversational
-                        chatbots—that solve real-world problems with elegance and efficiency.</p>
+                    <p>My passion lies in creating intelligent systems - from multi-agent AI pipelines to conversational
+                        chatbots - that solve real-world problems with elegance and efficiency.</p>
                 </div>
 
                 <div class="stats-grid">
@@ -927,12 +927,12 @@
                         <div class="stat-label">Entities Managed</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">80%</div>
-                        <div class="stat-label">Cost Reduction Achieved</div>
+                        <div class="stat-number">10+</div>
+                        <div class="stat-label">Production-grade AI projects</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">15min</div>
-                        <div class="stat-label">End-to-End Generation</div>
+                        <div class="stat-number">80%</div>
+                        <div class="stat-label">Max Efficiency gained from Automation</div>
                     </div>
                 </div>
             </div>
@@ -1031,7 +1031,7 @@
             <div class="section-header">
                 <div class="section-tag">Portfolio</div>
                 <h2 class="section-title">Featured <span class="gradient-text">Projects</span></h2>
-                <p class="section-subtitle">A selection of my personal and professional work showcasing AI, mobile
+                <p class="section-subtitle">A selection of my personal and professional work showcasing AI, Android app
                     development, and data science</p>
             </div>
 
@@ -1224,7 +1224,7 @@
 
                 <div class="skill-category">
                     <div class="skill-icon">📱</div>
-                    <h3>Mobile Development</h3>
+                    <h3>Android app Development</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Kotlin</span>
                         <span class="skill-tag">Jetpack Compose</span>
@@ -1287,7 +1287,7 @@
             <div class="contact-grid">
                 <div class="contact-info">
                     <h3>Ready to collaborate?</h3>
-                    <p>Whether you're looking for a data scientist, AI engineer, or mobile developer, I'm always open to
+                    <p>Whether you're looking for a data scientist, AI engineer, or app developer, I'm always open to
                         discussing new opportunities and innovative projects.</p>
                     <p>Based in Warsaw, Poland, I'm available for remote work and local opportunities.</p>
                 </div>
@@ -1409,3 +1409,4 @@
 
 
 </html>
+
