--- a/index.html
+++ b/index.html
@@ -907,7 +907,8 @@
             <div class="about-grid">
                 <div class="about-content">
                     <h3>From Supernova to Software</h3>
-                    <p>With a Master's degree in Physics from Pune University and research experience in Astrophysics and Cosmology at the National
+                    <p>With a Master's degree in Physics from Pune University and research experience in Astrophysics
+                        and Cosmology at the National
                         Center for Nuclear Research, I bring a unique analytical perspective to data science and AI
                         engineering.</p>
                     <p>Currently at ING Hubs Poland in Warsaw, I execute advanced analytics projects optimizing model
@@ -1038,20 +1039,20 @@
             <div class="projects-grid">
                 <!-- AI Projects -->
                 <div class="project-card">
-                    <div class="project-image">🤖</div>
+                    <div class="project-image">📊</div>
                     <div class="project-content">
-                        <div class="project-category">AI/ML</div>
-                        <h3 class="project-title">AI-Powered Video Creation Pipeline</h3>
-                        <p class="project-description">Built a 5-agent LangGraph system automating research,
-                            fact-checking, scriptwriting, TTS, and video generation. Achieved 80%+ cost reduction and
-                            <15 min end-to-end generation.</p>
-                                <div class="project-tech">
-                                    <span class="tech-badge">LangChain</span>
-                                    <span class="tech-badge">LangGraph</span>
-                                    <span class="tech-badge">OpenAI</span>
-                                    <span class="tech-badge">Anthropic</span>
-                                    <span class="tech-badge">GPU</span>
-                                </div>
+                        <div class="project-category">Data Science</div>
+                        <h3 class="project-title">Business Segmentation Analysis</h3>
+                        <p class="project-description">Customer segmentation using K-Means clustering on 100K+ records
+                            for risk assessment and AML compliance. Optimized segment identification with Silhouette
+                            Analysis and PCA visualization.</p>
+                        <div class="project-tech">
+                            <span class="tech-badge">Python</span>
+                            <span class="tech-badge">K-Means</span>
+                            <span class="tech-badge">PCA</span>
+                            <span class="tech-badge">scikit-learn</span>
+                            <span class="tech-badge">Pandas</span>
+                        </div>
                     </div>
                 </div>
 
@@ -1409,4 +1410,3 @@
 
 
 </html>
-
