--- a/index.html
+++ b/index.html
@@ -1042,10 +1042,10 @@
                     <div class="project-image">📊</div>
                     <div class="project-content">
                         <div class="project-category">Data Science</div>
-                        <h3 class="project-title">Business Segmentation Analysis</h3>
-                        <p class="project-description">Customer segmentation using K-Means clustering on 100K+ records
+                        <h3 class="project-title">Customer Segmentation Project</h3>
+                        <p class="project-description">Performed customer segmentation using K-Means clustering on 100K+ customers
                             for risk assessment and AML compliance. Optimized segment identification with Silhouette
-                            Analysis and PCA visualization.</p>
+                            Analysis. System is scalable to multiple entities and agnostic to systematic bias.</p>
                         <div class="project-tech">
                             <span class="tech-badge">Python</span>
                             <span class="tech-badge">K-Means</span>
@@ -1410,3 +1410,4 @@
 
 
 </html>
+
