--- a/index.html
+++ b/index.html
@@ -573,6 +573,9 @@
             border: 1px solid rgba(255, 255, 255, 0.05);
             transition: all 0.4s ease;
             cursor: pointer;
+            text-decoration: none;
+            color: inherit;
+            display: block;
         }
 
         .project-card:hover {
@@ -1032,20 +1035,20 @@
             <div class="section-header">
                 <div class="section-tag">Portfolio</div>
                 <h2 class="section-title">Featured <span class="gradient-text">Projects</span></h2>
-                <p class="section-subtitle">A selection of my personal work showcasing AI, Android app
+                <p class="section-subtitle">A selection of my personal and professional work showcasing AI, Android app
                     development, and data science</p>
             </div>
 
             <div class="projects-grid">
                 <!-- AI Projects -->
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar/Segmentation" target="_blank" class="project-card">
                     <div class="project-image">📊</div>
                     <div class="project-content">
                         <div class="project-category">Data Science</div>
-                        <h3 class="project-title">Customer Segmentation</h3>
-                        <p class="project-description">Performed customer segmentation using K-Means clustering on 100K+ customers.
-                            Optimized segment identification with Silhouette Analysis. 
-                            System is scalable to multiple entities and agnostic to systematic bias.</p>
+                        <h3 class="project-title">Business Segmentation Analysis</h3>
+                        <p class="project-description">Customer segmentation using K-Means clustering on 100K+ records
+                            for risk assessment and AML compliance. Optimized segment identification with Silhouette
+                            Analysis and PCA visualization.</p>
                         <div class="project-tech">
                             <span class="tech-badge">Python</span>
                             <span class="tech-badge">K-Means</span>
@@ -1054,9 +1057,9 @@
                             <span class="tech-badge">Pandas</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar/render_chatbot" target="_blank" class="project-card">
                     <div class="project-image">💬</div>
                     <div class="project-content">
                         <div class="project-category">AI/ML</div>
@@ -1071,9 +1074,9 @@
                             <span class="tech-badge">LLaMA</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <!-- <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
                     <div class="project-image">📊</div>
                     <div class="project-content">
                         <div class="project-category">Data Science</div>
@@ -1086,10 +1089,10 @@
                             <span class="tech-badge">GCP</span>
                         </div>
                     </div>
-                </div>
+                </a> -->
 
                 <!-- Android Projects -->
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar/Project_FortressAI-Cloud" target="_blank" class="project-card">
                     <div class="project-image">🔐</div>
                     <div class="project-content">
                         <div class="project-category">Android</div>
@@ -1103,9 +1106,9 @@
                             <span class="tech-badge">Firebase</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
                     <div class="project-image">🌟</div>
                     <div class="project-content">
                         <div class="project-category">Android</div>
@@ -1119,9 +1122,9 @@
                             <span class="tech-badge">Retrofit</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar/BrainTeaser---IQ-Offline" target="_blank" class="project-card">
                     <div class="project-image">🧠</div>
                     <div class="project-content">
                         <div class="project-category">Android</div>
@@ -1135,10 +1138,10 @@
                             <span class="tech-badge">Coroutines</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- Web Projects -->
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
                     <div class="project-image">🎨</div>
                     <div class="project-content">
                         <div class="project-category">Web</div>
@@ -1151,9 +1154,9 @@
                             <span class="tech-badge">Canvas</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
                     <div class="project-image">🎮</div>
                     <div class="project-content">
                         <div class="project-category">Web</div>
@@ -1166,9 +1169,9 @@
                             <span class="tech-badge">CSS3</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-card">
+                <a href="https://github.com/chetanbavdhankar/talkbot" target="_blank" class="project-card">
                     <div class="project-image">🎤</div>
                     <div class="project-content">
                         <div class="project-category">AI/ML</div>
@@ -1181,7 +1184,7 @@
                             <span class="tech-badge">TTS</span>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -1410,6 +1413,3 @@
 
 
 </html>
-
-
-
