dropped couple of projects

--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@
                 </a>
 
                 <!-- Web Projects -->
-                <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
+                <!-- <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
                     <div class="project-image">🎨</div>
                     <div class="project-content">
                         <div class="project-category">Web</div>
@@ -1154,7 +1154,7 @@
                             <span class="tech-badge">Canvas</span>
                         </div>
                     </div>
-                </a>
+                </a> -->
 
                 <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
                     <div class="project-image">🎮</div>
@@ -1171,7 +1171,7 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/chetanbavdhankar/talkbot" target="_blank" class="project-card">
+                <!-- <a href="https://github.com/chetanbavdhankar/talkbot" target="_blank" class="project-card">
                     <div class="project-image">🎤</div>
                     <div class="project-content">
                         <div class="project-category">AI/ML</div>
@@ -1184,7 +1184,7 @@
                             <span class="tech-badge">TTS</span>
                         </div>
                     </div>
-                </a>
+                </a> -->
             </div>
         </div>
     </section>
@@ -1413,3 +1413,4 @@
 
 
 </html>
+
