--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chetan Bavdhankar | Expert Data Scientist & AI Engineer</title>
     <meta name="description"
-        content="Expert Data Scientist with M.Sc. Physics specializing in AI/ML, LangChain, and advanced analytics. Based in Warsaw, Poland.">
+        content="Expert Data Scientist with M.Sc. Physics specializing in Artificial Intelligence (Agentic AI, RAG), Machine Learning, and advanced analytics. Based in Warsaw, Poland.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -1413,4 +1413,5 @@
 
 
 </html>
+
 
