--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
         <div class="hero-content">
             <div class="hero-tag">🚀 Expert Data Scientist & AI Engineer</div>
             <h1>Hi, I'm <span class="gradient-text">Chetan Bavdhankar</span></h1>
-            <p>M.Sc. Physics | Building intelligent systems with AI/ML, LangChain, and advanced analytics. Transforming
+            <p>M.Sc. Physics | Building intelligent systems with Artificial Intelligence (Agentic AI, RAG), Machine Learning, and advanced analytics. Transforming
                 data into actionable insights and innovative solutions.</p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">
@@ -1413,5 +1413,6 @@
 
 
 </html>
+
 
 
