--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
             <div class="section-header">
                 <div class="section-tag">Portfolio</div>
                 <h2 class="section-title">Featured <span class="gradient-text">Projects</span></h2>
-                <p class="section-subtitle">A selection of my personal and professional work showcasing AI, Android app
+                <p class="section-subtitle">A selection of my personal work showcasing AI, Android app
                     development, and data science</p>
             </div>
 
@@ -1413,6 +1413,7 @@
 
 
 </html>
+
 
 
 
