New projects ArxivGnosis and Hodophile added to featured projects

--- a/index.html
+++ b/index.html
@@ -884,7 +884,8 @@
         <div class="hero-content">
             <div class="hero-tag">🚀 Expert Data Scientist & AI Engineer</div>
             <h1>Hi, I'm <span class="gradient-text">Chetan Bavdhankar</span></h1>
-            <p>M.Sc. Physics | Building intelligent systems with Artificial Intelligence (Agentic AI, RAG), Machine Learning, and advanced analytics. Transforming
+            <p>M.Sc. Physics | Building intelligent systems with Artificial Intelligence (Agentic AI, RAG), Machine
+                Learning, and advanced analytics. Transforming
                 data into actionable insights and innovative solutions.</p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">
@@ -1035,12 +1036,29 @@
             <div class="section-header">
                 <div class="section-tag">Portfolio</div>
                 <h2 class="section-title">Featured <span class="gradient-text">Projects</span></h2>
-                <p class="section-subtitle">A selection of my personal work showcasing skills in Artificial Intelligence, Android app
+                <p class="section-subtitle">A selection of my personal work showcasing skills in Artificial
+                    Intelligence, Android app
                     development, and data science</p>
             </div>
 
             <div class="projects-grid">
                 <!-- AI Projects -->
+                <a href="https://github.com/chetanbavdhankar/ArxivGnosis" target="_blank" class="project-card">
+                    <div class="project-image">🏛️</div>
+                    <div class="project-content">
+                        <div class="project-category">AI Agent</div>
+                        <h3 class="project-title">ArxivGnosis</h3>
+                        <p class="project-description">Intelligent research assistant that discovers, ranks, and
+                            summarizes Arxiv papers using LLMs. Features impact filtering and automated content creation
+                            workflows.</p>
+                        <div class="project-tech">
+                            <span class="tech-badge">Python</span>
+                            <span class="tech-badge">LangChain</span>
+                            <span class="tech-badge">LLMs</span>
+                            <span class="tech-badge">Arxiv API</span>
+                        </div>
+                    </div>
+                </a>
                 <a href="https://github.com/chetanbavdhankar/Segmentation" target="_blank" class="project-card">
                     <div class="project-image">📊</div>
                     <div class="project-content">
@@ -1092,7 +1110,8 @@
                 </a> -->
 
                 <!-- Android Projects -->
-                <a href="https://github.com/chetanbavdhankar/Project_FortressAI-Cloud" target="_blank" class="project-card">
+                <a href="https://github.com/chetanbavdhankar/Project_FortressAI-Cloud" target="_blank"
+                    class="project-card">
                     <div class="project-image">🔐</div>
                     <div class="project-content">
                         <div class="project-category">Android</div>
@@ -1124,7 +1143,8 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/chetanbavdhankar/BrainTeaser---IQ-Offline" target="_blank" class="project-card">
+                <a href="https://github.com/chetanbavdhankar/BrainTeaser---IQ-Offline" target="_blank"
+                    class="project-card">
                     <div class="project-image">🧠</div>
                     <div class="project-content">
                         <div class="project-category">Android</div>
@@ -1141,6 +1161,21 @@
                 </a>
 
                 <!-- Web Projects -->
+                <a href="https://github.com/chetanbavdhankar/hodophile" target="_blank" class="project-card">
+                    <div class="project-image">🧭</div>
+                    <div class="project-content">
+                        <div class="project-category">Web App</div>
+                        <h3 class="project-title">Hodophile Travel Agent</h3>
+                        <p class="project-description">Multi-origin group travel optimizer finding the Global Minimum
+                            cost using multi-modal transport search, neighborhood intelligence, and time-window
+                            constraints.</p>
+                        <div class="project-tech">
+                            <span class="tech-badge">HTML/CSS/JS</span>
+                            <span class="tech-badge">Algorithms</span>
+                            <span class="tech-badge">Local Storage</span>
+                        </div>
+                    </div>
+                </a>
                 <!-- <a href="https://github.com/chetanbavdhankar" target="_blank" class="project-card">
                     <div class="project-image">🎨</div>
                     <div class="project-content">
@@ -1413,8 +1448,3 @@
 
 
 </html>
-
-
-
-
-
